[package]
name = "p4_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v4"] }
